test/opa/opa-fixtures/rejected/deployment-invalid-requests-memory.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: opa-test-qa
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "600m"
