test/opa/opa-fixtures/rejected/deployment-invalid-requests.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: opa-test-qa
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        resources:
          requests:
