test/opa/opa-fixtures/rejected/ingress-invalid-conflict.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: opa-test-staging
spec:
  rules:
  - host: signin.acmecorp.com
    http:
      paths:
      - defaultBackend:
          service:
            name: nginx
            port:
              number: 80
