test/opa/opa-fixtures/rejected/namespace-invalid-lables.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superolo-world-bad
  labels:
    company: DISCOVERY-VITALITY
    service: Disc-Card-Wallet-Service
    environment: Dev
