test/opa/opa-fixtures/rejected/namespace-invalid-no-company-lables.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: no-company-lables-namespace
  annotations:
    ingress-whitelist: "*.acmecorp.com"
    registry-whitelist: "nginx,grafana,prom"
