test/opa/opa-fixtures/rejected/namespace-invalid-no-lables.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bendersnatch-no-lables
  annotations:
    ingress-whitelist: "*.acmecorp.com"
    registry-whitelist: "nginx,grafana,prom"
