test/opa/opa-fixtures/rejected/namespace-invalid-wrong-company.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: invalid-namespace-wrong-company
  labels:
    company: company-z
    service: Company-Z-Service-One
