test/opa/opa-fixtures/rejected/namespace-invalid-wrong-lables.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bendersnatch-wrong-lables
  labels:
    blargh: blargh
    another-one: another-one
  annotations:
    ingress-whitelist: "*.acmecorp.com"
    registry-whitelist: "nginx,grafana,prom"
