test/opa/opa-fixtures/rejected/namespace-invalid-wrong-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: invalid-namespace-wrong-service
  labels:
    company: company-x
    service: Company-Y-Service-One
