test/opa/opa-fixtures/rejected/pod-invalid-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goproxy
  namespace: opa-test-qa
  labels:
    app: goproxy
spec:
  containers:
  - name: goproxy
    image: k8s.gcr.io/goproxy:0.1
    ports:
    - containerPort: 8080
