test/opa/opa-fixtures/rejected/pod-invalid-wrong-tag.yaml
apiVersion: v1 # for versions before 1.9.0 use apps/v1beta2
kind: Pod
metadata:
  name: nginx-deployment
  namespace: opa-test-qa
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
